ExpressionOperationBuilderImpl_UnitTest